Fixed LFS error

--- a/notebook/preprocessing.ipynb
+++ b/notebook/preprocessing.ipynb
@@ -1919,6 +1919,76 @@
     "print(f\"Invalid coordinates found: {len(invalid_coords)}\")\n",
     "print(f\"Potential duplicate stations: {len(duplicates)}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b769b8fa",
+   "metadata": {},
+   "source": [
+    "### Preprocessing Daily Climate data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d32052d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 0. Load the raw dataset\n",
+    "file_path = '../../data/raw/dailyclimate.csv'  \n",
+    "df = pd.read_csv(file_path)\n",
+    "\n",
+    "# 1. Drop Unnecessary Columns\n",
+    "if 'Unnamed: 0' in df.columns:\n",
+    "    df = df.drop(columns=['Unnamed: 0'])\n",
+    "\n",
+    "# 2. Convert 'Date' to datetime\n",
+    "df['Date'] = pd.to_datetime(df['Date'], format='%m/%d/%Y', errors='coerce')\n",
+    "\n",
+    "# 3. Sort by District and Date\n",
+    "df = df.sort_values(by=['District', 'Date']).reset_index(drop=True)\n",
+    "\n",
+    "# 4. Drop Duplicates\n",
+    "df = df.drop_duplicates()\n",
+    "\n",
+    "# 4.5. Randomly sample max 10 rows per District\n",
+    "df = df.groupby('District').apply(lambda x: x.sample(min(10, len(x)), random_state=42)).reset_index(drop=True)\n",
+    "\n",
+    "# 5. Check missing values\n",
+    "print(\"Missing values:\\n\", df.isnull().sum())\n",
+    "\n",
+    "# 6. Normalize column names\n",
+    "df.columns = df.columns.str.strip().str.lower().str.replace(' ', '_')\n",
+    "\n",
+    "# 7. Create Time Features\n",
+    "df['year'] = df['date'].dt.year\n",
+    "df['month'] = df['date'].dt.month\n",
+    "df['day'] = df['date'].dt.day\n",
+    "\n",
+    "def get_season(month):\n",
+    "    if month in [12, 1, 2]:\n",
+    "        return 'Winter'\n",
+    "    elif month in [3, 4, 5]:\n",
+    "        return 'Spring'\n",
+    "    elif month in [6, 7, 8]:\n",
+    "        return 'Monsoon'\n",
+    "    else:\n",
+    "        return 'Autumn'\n",
+    "\n",
+    "df['season'] = df['month'].apply(get_season)\n",
+    "\n",
+    "# 8. Validate Latitude and Longitude ranges\n",
+    "print(\"Latitude Range:\", df['latitude'].min(), \"to\", df['latitude'].max())\n",
+    "print(\"Longitude Range:\", df['longitude'].min(), \"to\", df['longitude'].max())\n",
+    "\n",
+    "# 9. Save cleaned dataset\n",
+    "df.to_csv('../../data/processed/dailyclimate_cleaned.csv', index=False)\n",
+    "\n",
+    "print(\"✅ Preprocessing completed successfully!\")"
+   ]
   }
  ],
  "metadata": {
